--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ﻿/.vs
-/20190122_IoTinAction/.vs
-/20190122_IoTinAction/bin
-/20190122_IoTinAction/obj
-/20190122_IoTinAction/*.vcxproj.user
+/*/.vs
+/*/bin
+/*/obj
+/*/*.vcxproj.user
